# React-Template-CLI

./: .clang-format  .gitignore  3  CMakeLists.txt  README.md  compile_flags.txt  main.cpp
assets/templates/: component-js.txt  component-test-js.txt  component-test.txt
executables/: CMakeLists.txt
implementation/: ErrorHandler.cpp  Executor.cpp
include/: CLI.hpp  ErrorHandler.hpp  Executor.hpp
rtc/: CMakeLists.txt  main.cpp
rtc/assets/: help.txt
rtc/assets/templates/: component-styles-css.txt  component-test-js.txt  component-test-ts.txt  component.txt
rtc/cli-lib/source/: CMakeLists.txt  Executor.cpp
rtc/include/: CLI.hpp
rtc/lib/include/: ErrorHandler.hpp  Executor.hpp
rtc/lib/source/: CMakeLists.txt  ErrorHandler.cpp  Executor.cpp
